# infomap_sims

./: Makefile  analyze_sim_results.ipynb  infomap_sims.ipynb  infomap_sims.py  pyproject.toml  results.csv
