[project]
name = "infomap-sims"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.14.1",
    "numpy>=2.1.1",
    "matplotlib>=3.9.2",
    "infomap>=2.8.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "networkx>=3.3",
    "scikit-learn>=1.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
